2009-11-25  Alan McGovern  <amcgovern@novell.com>

	* grid.cpp: UIElements are only considered to span an auto row
	  if they do not also span a star row. Similarly for columns.
	  Add the missing check to the if statement. Fixes several
	  moon-units and also scrollbars on the silverlight toolkit.

2009-11-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: SeekingHandler: only set BufferingProgress and emit
	the event if the property actually changes.

2009-11-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Don't go to the Buffering state when Seek is called,
	do it instead in the Seeking handler. Fixes regression of MS DRT #486.

2009-11-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Ensure that after a seek we don't add frames to the
	streams that we don't need (such as frames before the last keyframe
	before the point we seeked to). Also emit Media::SeekingEvent when we
	start to seek.

	* mediaplayer.cpp: Remove the DEBUG_ADVANCEFRAME define: use the LOG_EX
	logging method instead.

	* mediaelement.cpp: When we seek, go to the Buffering state, and when
	the pipeline starts seeking, set buffering progress to 0. This ensures
	we emit buffering process changed events when the seek has completed.
	
	* pipeline-asf.cpp: MmsPlaylistEntry: When we seek we need to clear
	whatever we have in our queue of packets.

	* playlist.cpp: Implement PlaylistEntry::SeekingHandler.

2009-11-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp:
	* pipeline.cpp|h:
	* mediaplayer.cpp:
	* mediaelement.cpp: Make Media::GetDemuxer and IMediaStream::GetDemuxer
	return a reffed demuxer (and rename methods appropiately). Also update
	all usage of those methods.

2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* xaml.h:
	* xaml.cpp:
	* template.cpp:
	* dependencyobject.h:
	* dependencyobject.cpp: DOs which are expanded from a
	  ControlTemplate need to keep track of the
	  'templateBindingSource' so that we can attach new