@@ -1,5 +1,13 @@
 2009-11-25  Alan McGovern  <amcgovern@novell.com>
 
+	* runtime.cpp: Use TabNavigationWalker to perform the actual
+	  focusing otherwise we will only focus properly if the root
+	  element is a focusable control. If nothing in the tree is
+	  focusable, the root element itself is forcibly focused.
+	  Fixes drt 175.
+
+2009-11-25  Alan McGovern  <amcgovern@novell.com>
+
 	* grid.cpp: UIElements are only considered to span an auto row
 	  if they do not also span a star row. Similarly for columns.
 	  Add the missing check to the if statement. Fixes several
